--- a/templates/upload_form.html
+++ b/templates/upload_form.html
@@ -6,7 +6,7 @@
     <little>THIS IS TEST</little>
 </head>
 <body>
-    <h1>Upload PDF and Excel Files</h1>
+    <h1>MY FORM</h1>
     <form method="post" enctype="multipart/form-data">
         <input type="file" name="pdf_file" required>
         <input type="file" name = "excel_file" required>
